# difftest

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
demo/: fail.tape  hero.tape  pass.tape  smoke.tape
src/: lib.rs  main.rs  runner.rs
tests/: integration.rs
tests/fixtures/: exit_one.sh  exit_zero.sh  greet.sh  greet_broken.sh
use-cases/: AESTHETIC_PROPOSAL.md  PYTHON_ELIXIR_RESEARCH.md
use-cases/lipgloss-go-vs-rust/: README.md
use-cases/lipgloss-go-vs-rust/go-example/: go-example  go.mod  main.go
use-cases/lipgloss-go-vs-rust/rust-example/: Cargo.toml
use-cases/lipgloss-go-vs-rust/rust-example/src/: main.rs
