[package]
name = "difftest"
version = "0.1.0"
edition = "2024"
description = "Differential testing CLI — run two programs with the same inputs, compare outputs"
license = "MIT"
repository = "https://github.com/nalediym/difftest"
homepage = "https://github.com/nalediym/difftest"
keywords = ["testing", "differential", "comparison", "cli", "migration"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"
authors = ["Naledi Madisa"]

[dependencies]
clap = { version = "4", features = ["derive"] }
